Creación, actualización y eliminación de canción

--- a/UcoPruebaTecnica/Views/Artist/Actualizar.cshtml
+++ b/UcoPruebaTecnica/Views/Artist/Actualizar.cshtml
@@ -15,7 +15,7 @@
 </div>
 <div class="text-center">
     <form action="/Artist/Actualizar" method="post">
-        <div class="input-group">
+        <div class="input-group" style="width: 230px;">
             <div class="input-group-prepend">
                 <span class="input-group-text" style="width: 124px" id="">Id</span>
             </div>
