--- a/UcoPruebaTecnica/Views/Artist/Eliminar.cshtml
+++ b/UcoPruebaTecnica/Views/Artist/Eliminar.cshtml
@@ -15,7 +15,7 @@
 </div>
 <div class="text-center">
     <form action="/Artist/Eliminar" method="post">
-        <div class="input-group">
+        <div class="input-group" style="width: 230px;">
             <div class="input-group-prepend">
                 <span class="input-group-text" style="width: 124px" id="">Id</span>
             </div>
@@ -26,18 +26,18 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" style="width: 124px" id="">Nombre</span>
             </div>
-            <input type="text" style="text-transform:uppercase" class="form-control" name="nombre" id="nombre" maxlength="150" value="@Model.Nombre" readonly required>
+            <input type="text" style="text-transform:uppercase" class="form-control" name="nombre" id="nombre" maxlength="150" value="@Model.Nombre" readonly>
         </div>
         <br />
         <div class="input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text" style="width: 124px" id="">Pais</span>
             </div>
-            <input type="text" style="text-transform:uppercase" class="form-control" name="pais" id="pais" maxlength="150" value="@Model.Pais" readonly required>
+            <input type="text" style="text-transform:uppercase" class="form-control" name="pais" id="pais" maxlength="150" value="@Model.Pais" readonly>
             <div class="input-group-prepend">
                 <span class="input-group-text" id="">Casa Disquera</span>
             </div>
-            <input type="text" style="text-transform:uppercase" class="form-control" name="casaDisquera" id="casaDisquera" maxlength="150" value="@Model.CasaDisquera" readonly required>
+            <input type="text" style="text-transform:uppercase" class="form-control" name="casaDisquera" id="casaDisquera" maxlength="150" value="@Model.CasaDisquera" readonly>
         </div>
         <br />
         <div style="float:right">
