--- a/UcoPruebaTecnica/Views/Artist/Index.cshtml
+++ b/UcoPruebaTecnica/Views/Artist/Index.cshtml
@@ -6,16 +6,16 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Gestión de Artistas</h1>
+    <h1 class="display-4">Gestión Artistas</h1>
     <div style="float:right">
-        <button class="btn btn-primary" onclick="location.href = '../Artist/Nuevo'"> Nuevo </button>
+        <button class="btn btn-primary btn-sm" onclick="location.href = '../Artist/Nuevo'"> Nuevo </button>
     </div>
     <br />
     <br />
     <div class="alert alert-@ViewBag.alerta"> -- <b>@ViewBag.res</b> --</div>
 </div>
 <div class="text-center">
-    <table id="tablaArtist" class="table table-bordered">
+    <table id="tablaArtista" class="table table-bordered">
         <thead>
             <tr>
                 <td>Id</td>
