--- a/UcoPruebaTecnica/Views/Artist/Nuevo.cshtml
+++ b/UcoPruebaTecnica/Views/Artist/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Artista";
-    ViewData["Title"] = "Listado de Artistas";
+    ViewData["Title"] = "Creación de Artista";
 }
 
 <div class="text-center">
