--- a/UcoPruebaTecnica/Views/Song/Actualizar.cshtml
+++ b/UcoPruebaTecnica/Views/Song/Actualizar.cshtml
@@ -1,6 +1,7 @@
-﻿@{
-    ViewBag.Title = "Cancion";
-    ViewData["Title"] = "Creación de Canción";
+﻿@model UcoPruebaTecnica.Models.Song
+@{
+    ViewBag.Title = "Canción";
+    ViewData["Title"] = "Actualización de Canción";
 }
 
 <div class="text-center">
@@ -11,21 +12,28 @@
     <br />
     <br />
     <div class="alert alert-@ViewBag.alerta"> -- <b>@ViewBag.res</b> --</div>
- </div>
-<div class="text-center">    
-    <form action="/Song/Nuevo" method="post">
+</div>
+<div class="text-center">
+    <form action="/Song/Actualizar" method="post">
+        <div class="input-group" style="width: 230px;">
+            <div class="input-group-prepend">
+                <span class="input-group-text" style="width: 124px" id="">Id</span>
+            </div>
+            <input type="text" class="form-control" name="idCancion" id="idCancion" maxlength="150" value="@Model.IdCancion" readonly>
+        </div>
+        <br />
         <div class="input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text" style="width: 124px" id="">Nombre</span>
             </div>
-            <input type="text" style="text-transform:uppercase" class="form-control" name="nombre" id="nombre" maxlength="150" required>
+            <input type="text" style="text-transform:uppercase" class="form-control" name="nombre" id="nombre" maxlength="150" value="@Model.Nombre" required>
         </div>
         <br />
         <div class="input-group" style="width: 230px;">
             <div class="input-group-prepend">
                 <span class="input-group-text" style="width: 124px" id="">Duración</span>
             </div>
-            <input type="text" style="text-transform:uppercase" class="form-control" name="duracion" id="duracion" maxlength="20" required>
+            <input type="text" style="text-transform:uppercase" class="form-control" name="duracion" id="duracion" maxlength="20" value="@Model.Duracion" required>
         </div>
         <br />
         <div style="float:right">
