--- a/UcoPruebaTecnica/Views/Song/Actualizar.cshtml
+++ b/UcoPruebaTecnica/Views/Song/Actualizar.cshtml
@@ -17,23 +17,43 @@
     <form action="/Song/Actualizar" method="post">
         <div class="input-group" style="width: 230px;">
             <div class="input-group-prepend">
-                <span class="input-group-text" style="width: 124px" id="">Id</span>
+                <span class="input-group-text" style="width: 100px" id="">Id</span>
             </div>
             <input type="text" class="form-control" name="idCancion" id="idCancion" maxlength="150" value="@Model.IdCancion" readonly>
         </div>
         <br />
         <div class="input-group">
             <div class="input-group-prepend">
-                <span class="input-group-text" style="width: 124px" id="">Nombre</span>
+                <span class="input-group-text" style="width: 100px" id="">Nombre</span>
             </div>
             <input type="text" style="text-transform:uppercase" class="form-control" name="nombre" id="nombre" maxlength="150" value="@Model.Nombre" required>
         </div>
         <br />
         <div class="input-group" style="width: 230px;">
             <div class="input-group-prepend">
-                <span class="input-group-text" style="width: 124px" id="">Duración</span>
+                <span class="input-group-text" style="width: 100px" id="">Duración</span>
             </div>
             <input type="text" style="text-transform:uppercase" class="form-control" name="duracion" id="duracion" maxlength="20" value="@Model.Duracion" required>
+        </div>
+        <br />
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text" style="width: 100px" id="">Artista</span>
+            </div>
+            <select class="form-control" id="idArtista" name="idArtista" size="1" required>
+                <option value="0">-- Seleccionar --</option>
+                @foreach (var row in Model.Artist)
+                {
+                    if (@row.IdArtista == Model.IdArtista)
+                    {
+                        <option value="@row.IdArtista" selected>@row.Nombre</option>
+                    }
+                    else
+                    {
+                        <option value="@row.IdArtista">@row.Nombre</option>
+                    }
+                }
+            </select>
         </div>
         <br />
         <div style="float:right">
