--- a/UcoPruebaTecnica/Views/Song/Nuevo.cshtml
+++ b/UcoPruebaTecnica/Views/Song/Nuevo.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<UcoPruebaTecnica.Models.Artist>
+@{
     ViewBag.Title = "Cancion";
     ViewData["Title"] = "Creación de Canción";
 }
@@ -11,21 +12,34 @@
     <br />
     <br />
     <div class="alert alert-@ViewBag.alerta"> -- <b>@ViewBag.res</b> --</div>
- </div>
-<div class="text-center">    
+</div>
+<div class="text-center">
     <form action="/Song/Nuevo" method="post">
         <div class="input-group">
             <div class="input-group-prepend">
-                <span class="input-group-text" style="width: 124px" id="">Nombre</span>
+                <span class="input-group-text" style="width: 100px" id="">Nombre</span>
             </div>
             <input type="text" style="text-transform:uppercase" class="form-control" name="nombre" id="nombre" maxlength="150" required>
         </div>
         <br />
         <div class="input-group" style="width: 230px;">
             <div class="input-group-prepend">
-                <span class="input-group-text" style="width: 124px" id="">Duración</span>
+                <span class="input-group-text" style="width: 100px" id="">Duración</span>
             </div>
             <input type="text" style="text-transform:uppercase" class="form-control" name="duracion" id="duracion" maxlength="20" required>
+        </div>
+        <br />
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text" style="width: 100px" id="">Artista</span>
+            </div>
+            <select class="form-control" id="idArtista" name="idArtista" size="1" required>
+                <option value="0">-- Seleccionar --</option>
+                @foreach (var row in Model)
+                {
+                    <option value="@row.IdArtista">@row.Nombre</option>
+                }
+            </select>
         </div>
         <br />
         <div style="float:right">
