Se suben los cambios del reporte

--- a/UcoPruebaTecnica/Views/Song/Index.cshtml
+++ b/UcoPruebaTecnica/Views/Song/Index.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 <td>Id</td>
                 <td>Nombre</td>
-                <td>Duracion</td>
+                <td>Duración</td>
                 <td>Artista</td>
                 <td style="text-align: center; width: 160px">Acciones</td>
             </tr>
