--- a/UcoPruebaTecnica/Views/Shared/_Layout.cshtml
+++ b/UcoPruebaTecnica/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Song" asp-action="Index">Canciones</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Song" asp-action="Reporte">Reporte</a>
+                        </li>
                     </ul>
                 </div>
             </div>
